--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 />
                 <div class="card-body">
                   <h3 class="card-title">Leader</h3>
-                  <a href="Irvan.html" class="btn btn-primary">Show Bio</a>
+                  <a href="irvan.html" class="btn btn-primary">Show Bio</a>
                 </div>
               </div>
             </div>
