--- a/index.html
+++ b/index.html
@@ -233,13 +233,13 @@
                 class="team-member card shadow-sm p-3 bg-white rounded text-center"
               >
                 <img
-                  src="team-member2.jpg"
+                  src="vanno.jpg"
                   alt="Member 2"
                   class="card-img-top"
                 />
                 <div class="card-body">
                   <h3 class="card-title">Member</h3>
-                  <a href="Member2.html" class="btn btn-primary">Show Bio</a>
+                  <a href="vanno.html" class="btn btn-primary">Show Bio</a>
                 </div>
               </div>
             </div>
