--- a/index.html
+++ b/index.html
@@ -249,13 +249,13 @@
                 class="team-member card shadow-sm p-3 bg-white rounded text-center"
               >
                 <img
-                  src="team-member3.jpg"
+                  src="FOTO 1.jpg"
                   alt="Member 3"
                   class="card-img-top"
                 />
                 <div class="card-body">
                   <h3 class="card-title">Member</h3>
-                  <a href="Member3.html" class="btn btn-primary">Show Bio</a>
+                  <a href="ammar1.html" class="btn btn-primary">Show Bio</a>
                 </div>
               </div>
             </div>
