--- a/vanno.html
+++ b/vanno.html
@@ -119,7 +119,7 @@
             <div class="col-md-8">
                 <div class="member-info mb-4">
                     <h3 class="section-title">About Devanno Andhika Putra</h3>
-                    <p>Devanno adalah seorang Frontend Developer yang bekerja sebagai freelance. Berkeinginan menjadi Full Stack Developer. </p>
+                    <p>Devanno adalah seorang Frontend Developer sebagai Mahasiswa Politeknik Indonusa Surakarta. Berkeinginan menjadi Full Stack Developer. </p>
                     <table class="table table-bordered">
                         <tbody>
                             <tr>
