--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       <!-- Profile Image -->
       <div
         class="profile-img"
-        style="background-image: url('images/Logo Onxy.png')"
+        style="background-image: url('Logo Onxy.png')"
       ></div>
       <!-- Nama dan tagline di sidebar -->
       <h3>Onxy</h3>
