--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 class="team-member card shadow-sm p-3 bg-white rounded text-center"
               >
                 <img
-                  src=""
+                  src="irvan.jpg"
                   alt="Leader"
                   class="card-img-top"
                 />
