--- a/irvan.html
+++ b/irvan.html
@@ -103,7 +103,7 @@
         <div class="row">
             <div class="col-md-4 mb-4">
                 <div class="member-profile text-center">
-                    <img src="images/Irvan.jpg" alt="Member Profile Picture">
+                    <img src="irvan.jpg" alt="Member Profile Picture">
                     <h2 class="mt-3">Irvan Kurniawan</h2>
                     <p class="text-muted">Software Engineer</p>
                     <div class="social-links mt-3">
