--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 class="team-member card shadow-sm p-3 bg-white rounded text-center"
               >
                 <img
-                  src="FOTO 1.jpeg"
+                  src="mar.jpeg"
                   alt="Member 3"
                   class="card-img-top"
                 />
