--- a/vanno.html
+++ b/vanno.html
@@ -103,7 +103,7 @@
         <div class="row">
             <div class="col-md-4 mb-4">
                 <div class="member-profile text-center">
-                    <img src="vanno.jpg" alt="Member Profile Picture">
+                    <img src="vanno_2.jpg" alt="Member Profile Picture">
                     <h2 class="mt-3">Devanno Andhika Putra</h2>
                     <p class="text-muted">Frontend Developer</p>
                     <div class="social-links mt-3">
