--- a/ammar1.html
+++ b/ammar1.html
@@ -103,7 +103,7 @@
         <div class="row">
             <div class="col-md-4 mb-4">
                 <div class="member-profile text-center">
-                    <img src="FOTO 1.jpeg" alt="Member Profile Picture">
+                    <img src="mar.jpeg" alt="Member Profile Picture">
                     <h2 class="mt-3">Muhamad Ammar Raihan Ardiyanto</h2>
                     <p class="text-muted">Software Engineering</p>
                     <div class="social-links mt-3">
