--- a/ammar1.html
+++ b/ammar1.html
@@ -21,7 +21,7 @@
             width: 100%;
             max-width: 200px;
             height: auto;
-            border-radius: 15px; /* Sudut melengkung pada bentuk segi empat */
+            border-radius: 50%;
             border: 5px solid #ffffff; /* Border putih di sekitar gambar */
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s ease-in-out; /* Efek hover */
