--- a/ammar1.html
+++ b/ammar1.html
@@ -148,7 +148,7 @@
                                 </th>
                                 <td>
                                     <a href="https://wa.me/085713086851?text=Halo%20Saya%20ingin%20menyapa" target="_blank">
-                                        085713086851
+                                        Chat Personal
                                     </a>
                                 </td>
                             </tr>
