--- a/index.html
+++ b/index.html
@@ -285,6 +285,34 @@
                 </div>
               </div>
             </div>
+
+            <!-- Contact Section -->
+        <section id="contact" class="py-5">
+          <div class="container">
+              <h2 class="text-center mb-4">Contact</h2>
+              <div class="row justify-content-center">
+                  <div class="col-md-8">
+                      <!-- Contact form placeholder -->
+                  </div>
+              </div>
+  
+              <!-- Social Media Icons -->
+              <div class="text-center mt-4">
+                  <div class="social-icons">
+                      <a href="https://github.com/username" target="_blank" aria-label="GitHub">
+                          <i class="fab fa-github"></i>
+                      </a>
+                      <a href="https://linkedin.com/in/username" target="_blank" aria-label="LinkedIn">
+                          <i class="fab fa-linkedin"></i>
+                      </a>
+                      <a href="https://twitter.com/username" target="_blank" aria-label="Twitter">
+                          <i class="fab fa-twitter"></i>
+                      </a>
+                  </div>
+              </div>
+          </div>
+      </section>
+            
     <!-- Link ke JavaScript Bootstrap untuk fungsionalitas -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- JavaScript untuk toggle sidebar -->
