--- a/index.html
+++ b/index.html
@@ -312,6 +312,11 @@
               </div>
           </div>
       </section>
+            <!-- Footer Section -->
+      <footer class="bg-primary text-white text-center py-3">
+          <p>&copy; Copyright 2024. All rights reserved.</p>
+      </footer>
+  </div>
             
     <!-- Link ke JavaScript Bootstrap untuk fungsionalitas -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
