--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@
           </div>
       </section>
             <!-- Footer Section -->
+            <div>
       <footer class="bg-primary text-white text-center py-3">
           <p>&copy; Copyright 2024. All rights reserved.</p>
       </footer>
