--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Onxy Group</title>
+    <link rel="icon" href="Logo_Onxy_Rb.png" type="image/png">
     <!-- Link ke stylesheet Bootstrap untuk styling -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
