--- a/annisa.html
+++ b/annisa.html
@@ -57,13 +57,6 @@
             color: #0077ff; /* Warna teks judul */
         }
 
-        .btn-back {
-            position: fixed;
-            top: 15px;
-            left: 15px;
-            z-index: 1000; /* Pastikan tombol berada di atas konten lainnya */
-        }
-
         .social-links a {
             color: #0077ff;
             margin: 0 10px;
@@ -89,7 +82,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="Dashboard.html"> Dashboard </a>
+                        <a class="nav-link" href="Dashboard.html">Dashboard</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">About</a>
@@ -109,17 +102,17 @@
                     <div class="social-links mt-3">
                         <a href="https://www.linkedin.com/in/-a42828324/" target="_blank">
                             <i class="bi bi-linkedin" style="font-size: 24px;"></i>
-                          </a>
-                          <a href="https://github.com/aaynrn" target="_blank">
+                        </a>
+                        <a href="https://github.com/aaynrn" target="_blank">
                             <i class="bi bi-github" style="font-size: 24px;"></i>
-                          </a>                          
+                        </a>
                     </div>
                 </div>
             </div>
             <div class="col-md-8">
                 <div class="member-info mb-4">
                     <h3 class="section-title">About Annisa Ayu Nuraini</h3>
-                    <p>Annisa Ayu Nuraini is a is a student at the Politeknik Indonusa Surakarta campus majoring in Software Engineering Technology. Comes from SMKN 1 Wonoasri, Madiun, East Java, majoring in Electrical Power Installation Engineering. Graduate in 2023 and gapyear for one year.</p>
+                    <p>I am a student at Politeknik Indonusa Surakarta majoring in Software Engineering Technology. I come from SMKN 1 Wonoasri, Madiun, East Java, where I majored in Electrical Power Installation Engineering. I graduated in 2023, which means I am currently taking a one-year gap year.</p>
                     <table class="table table-bordered">
                         <tbody>
                             <tr>
@@ -139,7 +132,7 @@
                                     <i class="bi bi-envelope"></i> Email
                                 </th>
                                 <td>
-                                    <a href="mailto:annisaayunuraini052@gmail.com?subject=Subject%20Here&body=Message%20Here">annisaayunuraini052@com</a>
+                                    <a href="mailto:annisaayunuraini052@gmail.com?subject=Subject%20Here&body=Message%20Here">annisaayunuraini052@gmail.com</a>
                                 </td>
                             </tr>
                             <tr>
@@ -148,10 +141,10 @@
                                 </th>
                                 <td>
                                     <a href="https://wa.me/6281805406684?text=Halo%20Saya%20ingin%20menyapa" target="_blank">
-                                         Chat Personal
+                                        Chat Personal
                                     </a>
                                 </td>
-                            </tr>                            
+                            </tr>
                         </tbody>
                     </table>
                 </div>
@@ -160,7 +153,7 @@
                     <ul>
                         <li><i class="bi bi-building"></i> SMKN 1 Wonoasri</li>
                         <li><i class="bi bi-building"></i> Politeknik Indonusa Surakarta</li>
-                    </ul>                    
+                    </ul>
                 </div>
             </div>
         </div>
