--- a/annisa.html
+++ b/annisa.html
@@ -112,7 +112,7 @@
             <div class="col-md-8">
                 <div class="member-info mb-4">
                     <h3 class="section-title">About Annisa Ayu Nuraini</h3>
-                    <p>I am a student at Politeknik Indonusa Surakarta majoring in Software Engineering Technology. I come from SMKN 1 Wonoasri, Madiun, East Java, where I majored in Electrical Power Installation Engineering. I graduated in 2023, which means I am currently taking a one-year gap year.</p>
+                    <p>I am a student at Politeknik Indonusa Surakarta majoring in Software Engineering Technology.</p>
                     <table class="table table-bordered">
                         <tbody>
                             <tr>
