--- a/index.html
+++ b/index.html
@@ -269,20 +269,20 @@
             <!-- Member 3 -->
             <div class="col-lg-4 col-md-6">
               <div class="team-member card shadow-sm p-3 bg-white rounded text-center">
-                <img src="team-member4.jpg" alt="Member 4" class="card-img-top" />
+                <img src="annisa.jpg" alt="Member 4" class="card-img-top" />
                 <div class="card-body">
                   <h3 class="card-title">Member</h3>
-                  <a href="Member4.html" class="btn btn-primary">Show Bio</a>
+                  <a href="annisa.html" class="btn btn-primary">Show Bio</a>
                 </div>
               </div>
             </div>
             <!-- Member 4 -->
             <div class="col-lg-4 col-md-6">
               <div class="team-member card shadow-sm p-3 bg-white rounded text-center">
-                <img src="team-member5.jpg" alt="Member 5" class="card-img-top" />
+                <img src="ikanur.jpg" alt="Member 5" class="card-img-top" />
                 <div class="card-body">
                   <h3 class="card-title">Member</h3>
-                  <a href="Member5.html" class="btn btn-primary">Show Bio</a>
+                  <a href="ikanur.html" class="btn btn-primary">Show Bio</a>
                 </div>
               </div>
             </div>
