--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             <!-- Member 4 -->
             <div class="col-lg-4 col-md-6">
               <div class="team-member card shadow-sm p-3 bg-white rounded text-center">
-                <img src="ikanur.jpg" alt="Member 5" class="card-img-top" />
+                <img src="ika.jpg" alt="Member 5" class="card-img-top" />
                 <div class="card-body">
                   <h3 class="card-title">Member</h3>
                   <a href="ikanur.html" class="btn btn-primary">Show Bio</a>
