--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <!-- Member 3 -->
             <div class="col-lg-4 col-md-6">
               <div class="team-member card shadow-sm p-3 bg-white rounded text-center">
-                <img src="annisa.jpg" alt="Member 4" class="card-img-top" />
+                <img src="annisa2.jpg" alt="Member 4" class="card-img-top" />
                 <div class="card-body">
                   <h3 class="card-title">Member</h3>
                   <a href="annisa.html" class="btn btn-primary">Show Bio</a>
