--- a/annisa.html
+++ b/annisa.html
@@ -96,7 +96,7 @@
         <div class="row">
             <div class="col-md-4 mb-4">
                 <div class="member-profile text-center">
-                    <img src="annisa.jpg" alt="Member Profile Picture">
+                    <img src="annisa2.jpg" alt="Member Profile Picture">
                     <h2 class="mt-3">Annisa Ayu Nuraini</h2>
                     <p class="text-muted">A Student</p>
                     <div class="social-links mt-3">
