--- a/vanno.html
+++ b/vanno.html
@@ -92,7 +92,7 @@
                         <a class="nav-link" href="index.html"> Dashboard </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Abou</a>
+                        <a class="nav-link" href="#">About</a>
                     </li>
                 </ul>
             </div>
