--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Onxy Group</title>
     <!-- Link ke favicon untuk ikon di tab browser -->
-    <link rel="icon" href="Logo_Onxy_Rb.png" type="image/png">
+    <link rel="icon" href="image/Logo_Onxy_Rb.png" type="image/png">
     <!-- Link ke stylesheet Bootstrap untuk styling -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -240,7 +240,7 @@
       <!-- Profile Image -->
       <div
         class="profile-img"
-        style="background-image: url('Logo Onxy.png')"
+        style="background-image: url('image/Logo Onxy.png')"
       ></div>
       <h3>Onxy</h3>
       <p class="tagline">Trusted Partner</p>
@@ -269,50 +269,50 @@
             <!-- Leader -->
             <div class="col-lg-4 col-md-6">
               <div class="team-member card shadow-sm p-3 bg-white rounded text-center">
-                <img src="irvan.jpg" alt="Leader" class="card-img-top" />
+                <img src="image/irvan.jpg" alt="Leader" class="card-img-top" />
                 <div class="card-body">
                   <h3 class="card-title">Leader</h3>
-                  <a href="irvan.html" class="btn btn-primary">Show Bio</a>
+                  <a href="member/irvan.html" class="btn btn-primary">Show Bio</a>
                 </div>
               </div>
             </div>
             <!-- Member 1 -->
             <div class="col-lg-4 col-md-6">
               <div class="team-member card shadow-sm p-3 bg-white rounded text-center">
-                <img src="vanno.jpg" alt="Member 2" class="card-img-top" />
+                <img src="image/vanno.jpg" alt="Member 2" class="card-img-top" />
                 <div class="card-body">
                   <h3 class="card-title">Member</h3>
-                  <a href="vanno.html" class="btn btn-primary">Show Bio</a>
+                  <a href="member/vanno.html" class="btn btn-primary">Show Bio</a>
                 </div>
               </div>
             </div>
             <!-- Member 2 -->
             <div class="col-lg-4 col-md-6">
               <div class="team-member card shadow-sm p-3 bg-white rounded text-center">
-                <img src="mar.jpeg" alt="Member 3" class="card-img-top" />
+                <img src="image/mar.jpeg" alt="Member 3" class="card-img-top" />
                 <div class="card-body">
                   <h3 class="card-title">Member</h3>
-                  <a href="ammar1.html" class="btn btn-primary">Show Bio</a>
+                  <a href="member/ammar1.html" class="btn btn-primary">Show Bio</a>
                 </div>
               </div>
             </div>
             <!-- Member 3 -->
             <div class="col-lg-4 col-md-6">
               <div class="team-member card shadow-sm p-3 bg-white rounded text-center">
-                <img src="annisa2.jpg" alt="Member 4" class="card-img-top" />
+                <img src="image/annisa2.jpg" alt="Member 4" class="card-img-top" />
                 <div class="card-body">
                   <h3 class="card-title">Member</h3>
-                  <a href="annisa.html" class="btn btn-primary">Show Bio</a>
+                  <a href="member/annisa.html" class="btn btn-primary">Show Bio</a>
                 </div>
               </div>
             </div>
             <!-- Member 4 -->
             <div class="col-lg-4 col-md-6">
               <div class="team-member card shadow-sm p-3 bg-white rounded text-center">
-                <img src="ika.jpg" alt="Member 5" class="card-img-top" />
+                <img src="image/ika.jpg" alt="Member 5" class="card-img-top" />
                 <div class="card-body">
                   <h3 class="card-title">Member</h3>
-                  <a href="ikanur.html" class="btn btn-primary">Show Bio</a>
+                  <a href="member/ikanur.html" class="btn btn-primary">Show Bio</a>
                 </div>
               </div>
             </div>
