--- a/member/ikanur.html
+++ b/member/ikanur.html
@@ -7,74 +7,7 @@
     <title>Member Biodata View</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
-
-    <style>
-        body {
-            background: linear-gradient(to bottom, #0077ff, #ffffff); /* Gradien biru laut ke putih secara vertikal */
-        }
-
-        .navbar {
-            margin-bottom: 20px;
-        }
-
-        .member-profile img {
-            width: 100%;
-            max-width: 200px;
-            height: auto;
-            border-radius: 50%;
-            border: 5px solid #ffffff; /* Border putih di sekitar gambar */
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s ease-in-out; /* Efek hover */
-        }
-
-        .member-profile img:hover {
-            transform: scale(1.05); /* Perbesar gambar saat hover */
-        }
-
-        .member-profile h2 {
-            font-size: 1.5rem;
-            font-weight: 700;
-            color: #343a40; /* Warna teks judul */
-        }
-
-        .member-profile p {
-            font-size: 1.1rem;
-            color: #6c757d; /* Warna teks deskripsi */
-        }
-
-        .member-info,
-        .member-education {
-            background-color: #ffffff; /* Latar belakang putih untuk konten */
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .section-title {
-            border-bottom: 2px solid #0077ff; /* Garis bawah berwarna biru */
-            padding-bottom: 0.5rem;
-            margin-bottom: 1rem;
-            color: #0077ff; /* Warna teks judul */
-        }
-
-        .btn-back {
-            position: fixed;
-            top: 15px;
-            left: 15px;
-            z-index: 1000; /* Pastikan tombol berada di atas konten lainnya */
-        }
-
-        .social-links a {
-            color: #0077ff;
-            margin: 0 10px;
-            font-size: 1.2rem;
-            transition: color 0.3s ease-in-out;
-        }
-
-        .social-links a:hover {
-            color: #0056b3;
-        }
-    </style>
+    <link rel="stylesheet" href="style-member.css">
 </head>
 
 <body>
