--- a/member/vanno.html
+++ b/member/vanno.html
@@ -100,6 +100,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="JS/bio.js"></script>
 </body>
 
 </html>
