--- a/member/irvan.html
+++ b/member/irvan.html
@@ -7,7 +7,7 @@
     <title>Member Biodata View</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="style-member.css">
+    <link rel="stylesheet" href="style/style-bio.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html"> Dashboard </a>
+                        <a class="nav-link" href="Dashboard.html"> Dashboard </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">About</a>
@@ -35,22 +35,22 @@
     <div class="container py-5">
         <div class="row">
             <div class="col-md-4 mb-4">
-                <div class="member-profile text-center">
-                    <img src="../image/irvan.jpg" alt="Member Profile Picture">
+                <div class="member-profile text-center fade-in">
+                    <img src="style/images/irvan.jpg" alt="Member Profile Picture">
                     <h2 class="mt-3">Irvan Kurniawan</h2>
                     <p class="text-muted">Software Engineer</p>
                     <div class="social-links mt-3">
                         <a href="https://www.linkedin.com/in/irvan-kurniawan-a42828324/" target="_blank">
                             <i class="bi bi-linkedin" style="font-size: 24px;"></i>
-                          </a>
-                          <a href="https://github.com/nonename111" target="_blank">
+                        </a>
+                        <a href="https://github.com/nonename111" target="_blank">
                             <i class="bi bi-github" style="font-size: 24px;"></i>
-                          </a>                          
+                        </a>                          
                     </div>
                 </div>
             </div>
             <div class="col-md-8">
-                <div class="member-info mb-4">
+                <div class="member-info mb-4 fade-in">
                     <h3 class="section-title">About Irvan Kurniawan</h3>
                     <p>Irvan Kurniawan adalah Insinyur Perangkat Lunak yang bersemangat dengan minat yang besar dalam mengembangkan solusi inovatif. Dia memiliki pengalaman bekerja dengan berbagai teknologi dan selalu bersemangat untuk mempelajari keterampilan baru.</p>
                     <table class="table table-bordered">
@@ -88,7 +88,7 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="member-education mb-4">
+                <div class="member-education mb-4 fade-in">
                     <h3 class="section-title">Education</h3>
                     <ul>
                         <li><i class="bi bi-building"></i> SMK Muhammadiyah 04 Boyolali</li>
