--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <div class="team-member card shadow-sm p-3 bg-white rounded text-center">
                 <img src="style/images/irvan.jpg" alt="Leader" class="card-img-top" />
                 <div class="card-body">
-                  <h3 class="card-title">Leader</h3>
+                  <h3 class="card-title">IRVAN</h3>
                   <a href="member/irvan.html" class="btn btn-primary">Show Bio</a>
                 </div>
               </div>
@@ -73,7 +73,7 @@
               <div class="team-member card shadow-sm p-3 bg-white rounded text-center">
                 <img src="style/images/vanno.jpg" alt="Member 2" class="card-img-top" />
                 <div class="card-body">
-                  <h3 class="card-title">Member</h3>
+                  <h3 class="card-title">DEVANNO</h3>
                   <a href="member/vanno.html" class="btn btn-primary">Show Bio</a>
                 </div>
               </div>
@@ -83,7 +83,7 @@
               <div class="team-member card shadow-sm p-3 bg-white rounded text-center">
                 <img src="style/images/mar.jpeg" alt="Member 3" class="card-img-top" />
                 <div class="card-body">
-                  <h3 class="card-title">Member</h3>
+                  <h3 class="card-title">AMMAR</h3>
                   <a href="member/ammar1.html" class="btn btn-primary">Show Bio</a>
                 </div>
               </div>
@@ -93,7 +93,7 @@
               <div class="team-member card shadow-sm p-3 bg-white rounded text-center">
                 <img src="style/images/annisa2.jpg" alt="Member 4" class="card-img-top" />
                 <div class="card-body">
-                  <h3 class="card-title">Member</h3>
+                  <h3 class="card-title">ANNISA</h3>
                   <a href="member/annisa.html" class="btn btn-primary">Show Bio</a>
                 </div>
               </div>
@@ -103,7 +103,7 @@
               <div class="team-member card shadow-sm p-3 bg-white rounded text-center">
                 <img src="style/images/ika.jpg" alt="Member 5" class="card-img-top" />
                 <div class="card-body">
-                  <h3 class="card-title">Member</h3>
+                  <h3 class="card-title">IKA</h3>
                   <a href="member/ikanur.html" class="btn btn-primary">Show Bio</a>
                 </div>
               </div>
