--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
       <!-- Footer Section -->
       <footer class="bg-primary text-white text-center py-3">
-          <p>&copy; Copyright 2024. All rights reserved.</p>
+          <p>&copy; Onxy Group 2024. All rights reserved.</p>
       </footer>
   </div>
 
