--- a/index.html
+++ b/index.html
@@ -1,150 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Meta Charset untuk memastikan encoding karakter yang benar -->
-    <meta charset="UTF-8" />
-    <!-- Meta Viewport untuk membuat situs web responsif di perangkat seluler -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Onxy Group</title>
-    <!-- Link ke favicon untuk ikon di tab browser -->
-    <link rel="icon" href="style/images/Logo_Onxy_Rb.png" type="image/png">
-    <!-- Link ke stylesheet Bootstrap untuk styling -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <!-- Link ke stylesheet Font Awesome untuk ikon -->
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Interactive Login Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style/style_login.css">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
-    <link rel="stylesheet" href="style/style.css">
-  </head>
-  <body>
-    <!-- Tombol Toggle untuk menyembunyikan/menampilkan sidebar -->
-    <button class="toggle-btn" onclick="toggleSidebar()">
-      <i class="fas fa-bars"></i>
-    </button>
+</head>
+<body>
 
-    <!-- Sidebar -->
-    <div class="sidebar hide">
-      <!-- Profile Image -->
-      <div
-        class="profile-img"
-        style="background-image: url('style/images/Logo\ Onxy.png')"
-      ></div>
-      <h3>Onxy</h3>
-      <p class="tagline">Trusted Partner</p>
-      <a href="#about"><i class="fas fa-info-circle"></i> About Group</a>
-      <a href="#team"><i class="fas fa-users"></i> Our Members</a>
-      <a href="#contact"><i class="fas fa-envelope"></i> Contact</a>
+    <div class="floating-circles">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
     </div>
 
-    <!-- Main Content -->
-    <div class="content">
-      <!-- About Section -->
-      <section id="about" class="py-5">
-        <div class="container">
-          <h2 class="text-center mb-4">About the Group</h2>
-          <p class="text-center">
-            Tim kolaboratif yang merancang, mengembangkan, dan mengimplementasikan
-            solusi perangkat lunak inovatif dengan fokus pada kualitas dan efisiensi.
-          </p>
-        </div>
-      </section>
+    <div class="login-container">
+        <div class="welcome-container">
+            <div class="logo-container">
+                <img src="style/images/Logo Onxy.png" alt="Logo Grup" class="group-logo">
+            </div>
+        <h1>Selamat Datang</h1>
+        <p>Klik tombol di bawah ini untuk masuk ke Onxy Group.</p>
+        <a href="indexdashboard.html" class="btn text-white"><i class="fa fa-right-to-bracket"> Enter </i></a>
+    </div>
 
-      <!-- Team Section -->
-      <section id="team" class="py-5 bg-light">
-        <div class="container">
-          <h2 class="text-center mb-4">Our Member</h2>
-          <div class="row g-4">
-            <!-- Leader -->
-            <div class="col-lg-4 col-md-6">
-              <div class="team-member card shadow-sm p-3 bg-white rounded text-center">
-                <img src="style/images/irvan.jpg" alt="Leader" class="card-img-top" />
-                <div class="card-body">
-                  <h3 class="card-title">IRVAN</h3>
-                  <a href="member/irvan.html" class="btn btn-primary">Show Bio</a>
-                </div>
-              </div>
-            </div>
-            <!-- Member 1 -->
-            <div class="col-lg-4 col-md-6">
-              <div class="team-member card shadow-sm p-3 bg-white rounded text-center">
-                <img src="style/images/vanno.jpg" alt="Member 2" class="card-img-top" />
-                <div class="card-body">
-                  <h3 class="card-title">DEVANNO</h3>
-                  <a href="member/vanno.html" class="btn btn-primary">Show Bio</a>
-                </div>
-              </div>
-            </div>
-            <!-- Member 2 -->
-            <div class="col-lg-4 col-md-6">
-              <div class="team-member card shadow-sm p-3 bg-white rounded text-center">
-                <img src="style/images/mar.jpeg" alt="Member 3" class="card-img-top" />
-                <div class="card-body">
-                  <h3 class="card-title">AMMAR</h3>
-                  <a href="member/ammar1.html" class="btn btn-primary">Show Bio</a>
-                </div>
-              </div>
-            </div>
-            <!-- Member 3 -->
-            <div class="col-lg-4 col-md-6">
-              <div class="team-member card shadow-sm p-3 bg-white rounded text-center">
-                <img src="style/images/annisa2.jpg" alt="Member 4" class="card-img-top" />
-                <div class="card-body">
-                  <h3 class="card-title">ANNISA</h3>
-                  <a href="member/annisa.html" class="btn btn-primary">Show Bio</a>
-                </div>
-              </div>
-            </div>
-            <!-- Member 4 -->
-            <div class="col-lg-4 col-md-6">
-              <div class="team-member card shadow-sm p-3 bg-white rounded text-center">
-                <img src="style/images/ika.jpg" alt="Member 5" class="card-img-top" />
-                <div class="card-body">
-                  <h3 class="card-title">IKA</h3>
-                  <a href="member/ikanur.html" class="btn btn-primary">Show Bio</a>
-                </div>
-              </div>
-            </div>
-
-            <!-- Contact Section -->
-        <section id="contact" class="py-5">
-          <div class="container">
-              <h2 class="text-center mb-4">Contact</h2>
-              <div class="row justify-content-center">
-                  <div class="col-md-8">
-                      <!-- Contact form placeholder -->
-                  </div>
-              </div>
-  
-              <!-- Social Media Icons -->
-              <div class="text-center mt-4">
-                  <div class="social-icons">
-                      <a href="https://github.com/username" target="_blank" aria-label="GitHub">
-                          <i class="fab fa-github"></i>
-                      </a>
-                      <a href="https://linkedin.com/in/username" target="_blank" aria-label="LinkedIn">
-                          <i class="fab fa-linkedin"></i>
-                      </a>
-                      <a href="https://twitter.com/username" target="_blank" aria-label="Twitter">
-                          <i class="fab fa-twitter"></i>
-                      </a>
-                  </div>
-              </div>
-          </div>
-      </section>
-
-      <!-- Footer Section -->
-      <footer class="bg-primary text-white text-center py-3">
-          <p>&copy; Onxy Group 2024. All rights reserved.</p>
-      </footer>
-  </div>
-
-    <!-- Link ke JavaScript Bootstrap untuk fungsionalitas -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- JavaScript untuk toggle sidebar -->
-    <script src="JS/main.js"></script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
