--- a/indexdashboard.html
+++ b/indexdashboard.html
@@ -26,7 +26,7 @@
       <!-- Profile Image -->
       <div
         class="profile-img"
-        style="background-image: url('style/images/Logo_Onxy_Rb.png')"
+        style="background-image: url('style/images/Logo\ Onxy.png')"
       ></div>
       <h3>Onxy</h3>
       <p class="tagline">Trusted Partner</p>
