--- a/indexdashboard.html
+++ b/indexdashboard.html
@@ -60,7 +60,7 @@
                 <img src="style/images/irvan.jpg" 
                      alt="Leader" class="card-img-top" />
                 <div class="card-body">
-                  <h3 class="card-title">Leader</h3>
+                  <h3 class="card-title">Irvan</h3>
                   <a href="member/irvan.html" class="btn btn-primary">Show Bio</a>
                 </div>
               </div>
@@ -71,7 +71,7 @@
                 <img src="style/images/vanno.jpg" 
                      alt="Member 2" class="card-img-top" />
                 <div class="card-body">
-                  <h3 class="card-title">Member</h3>
+                  <h3 class="card-title">Devanno</h3>
                   <a href="member/vanno.html" class="btn btn-primary">Show Bio</a>
                 </div>
               </div>
@@ -82,7 +82,7 @@
                 <img src="style/images/mar.jpeg" 
                      alt="Member 3" class="card-img-top" />
                 <div class="card-body">
-                  <h3 class="card-title">Member</h3>
+                  <h3 class="card-title">Ammar</h3>
                   <a href="member/ammar1.html" class="btn btn-primary">Show Bio</a>
                 </div>
               </div>
@@ -93,7 +93,7 @@
                 <img src="style/images/annisa2.jpg" 
                      alt="Member 4" class="card-img-top" />
                 <div class="card-body">
-                  <h3 class="card-title">Member</h3>
+                  <h3 class="card-title">Annisa</h3>
                   <a href="member/annisa.html" class="btn btn-primary">Show Bio</a>
                 </div>
               </div>
@@ -104,7 +104,7 @@
                 <img src="style/images/ika.jpg" 
                      alt="Member 5" class="card-img-top" />
                 <div class="card-body">
-                  <h3 class="card-title">Member</h3>
+                  <h3 class="card-title">Ika</h3>
                   <a href="member/ikanur.html" class="btn btn-primary">Show Bio</a>
                 </div>
               </div>
